--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,81 +1,179 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import Layout from "../layouts/Layout.astro";
+import Navbar from "../components/Navbar.astro";
+import { Image, Picture } from "@astrojs/image/components";
+import Title from "../components/Title.astro";
+import FilmCard from "../components/FilmCard.astro";
+import ProfileCard from "../components/ProfileCard.astro";
+import films from "../data/films.json";
+import people from "../data/people.json";
+import Awards from "../components/Awards.astro";
+import Ticker from "../components/Ticker.astro";
 ---
 
-<Layout title="Welcome to Astro.">
-	<main>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
-	</main>
-</Layout>
+<Layout title="GREENFINGERS FILMS. 🥬 — Award-winning film collective.">
+  <Navbar />
 
-<style>
-	main {
-		margin: auto;
-		padding: 1.5rem;
-		max-width: 60ch;
-	}
-	h1 {
-		font-size: 3rem;
-		font-weight: 800;
-		margin: 0;
-	}
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
-	}
-	.instructions {
-		line-height: 1.6;
-		margin: 1rem 0;
-		border: 1px solid rgba(var(--accent), 25%);
-		background-color: white;
-		padding: 1rem;
-		border-radius: 0.4rem;
-	}
-	.instructions code {
-		font-size: 0.875em;
-		font-weight: bold;
-		background: rgba(var(--accent), 12%);
-		color: rgb(var(--accent));
-		border-radius: 4px;
-		padding: 0.3em 0.45em;
-	}
-	.instructions strong {
-		color: rgb(var(--accent));
-	}
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 1rem;
-		padding: 0;
-	}
-</style>
+  <main class="">
+    <section class="h-screen mt-16">
+      <div class="">
+        <h1
+          class="uppercase font-humane text-primary text-[35vw] leading-none font-bold"
+        >
+          Greenfingers
+        </h1>
+      </div>
+      <p
+        class="text-primary text-sm font-light -mt-20 tracking-tight ml-32 w-48 leading-4"
+      >
+        Your friendly award-winning film collective.
+      </p>
+      <div class="flex items-end absolute bottom-2 gap-3 overflow-hidden">
+        <Image
+          src="/public/images/200x300.jpeg"
+          alt="Greenfingers Film Still 1"
+          format="webp"
+          width={260}
+          height={170}
+          class="grayscale"
+        />
+        <Image
+          src="/public/images/200x400.jpeg"
+          alt="Greenfingers Film Still 2"
+          format="webp"
+          width={200}
+          height={120}
+          class="grayscale"
+        />
+        <Image
+          src="/public/images/300x200.jpeg"
+          alt="Greenfingers Film Still 3"
+          format="webp"
+          width={220}
+          height={160}
+          class="grayscale"
+        />
+        <Image
+          src="/public/images/300x300.jpeg"
+          alt="Greenfingers Film Still 4"
+          format="webp"
+          width={260}
+          height={150}
+          class="grayscale"
+        />
+        <Image
+          src="/public/images/400x100.jpeg"
+          alt="Greenfingers Film Still 5"
+          format="webp"
+          width={200}
+          height={100}
+          class="grayscale"
+        />
+        <Image
+          src="/public/images/400x200.jpeg"
+          alt="Greenfingers Film Still 6"
+          format="webp"
+          width={250}
+          height={140}
+          class="grayscale"
+        />
+      </div>
+    </section>
+    <Awards indexes={[1, 2, 3]} />
+    <section class="pt-20">
+      <Title text="Our Recent Films" banner />
+      <div class="mt-12 grid grid-cols-1 gap-10 lg:grid-cols-3">
+        {films.map((film, index) => <FilmCard film={film} index={index} />)}
+      </div>
+    </section>
+    <Awards indexes={[4, 5, 6]} />
+    <section class="pt-20">
+      <div class="flex justify-between items-end w-5/6">
+        <Title text=" Meet the Fingers" addtionalClasses="whitespace-nowrap" />
+        <p
+          class="max-w-xs px-6 text-right text-primary opacity-70 tracking-tight text-sm font-light"
+        >
+          Greenfingers is an internationally award-winning film collective based
+          in Manchester. Meet our members below.
+        </p>
+      </div>
+      <div class="mt-16 grid grid-cols-4 gap-8 max-w-[85vw]">
+        {people.map((person) => <ProfileCard person={person} />)}
+      </div>
+    </section>
+    <Ticker />
+    <footer class="pt-40">
+      <div class="flex">
+        <a
+          href="https://www.instagram.com/greenfingers_film/"
+          target="_blank"
+          class="w-1/4 aspect-square bg-[#C7F3D6] flex items-center justify-center"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+            width="24"
+            height="24"
+            class="text-dark-green fill-current w-2/5 h-2/5"
+            ><path fill="none" d="M0 0h24v24H0z"></path><path
+              d="M12 9a3 3 0 1 0 0 6 3 3 0 0 0 0-6zm0-2a5 5 0 1 1 0 10 5 5 0 0 1 0-10zm6.5-.25a1.25 1.25 0 0 1-2.5 0 1.25 1.25 0 0 1 2.5 0zM12 4c-2.474 0-2.878.007-4.029.058-.784.037-1.31.142-1.798.332-.434.168-.747.369-1.08.703a2.89 2.89 0 0 0-.704 1.08c-.19.49-.295 1.015-.331 1.798C4.006 9.075 4 9.461 4 12c0 2.474.007 2.878.058 4.029.037.783.142 1.31.331 1.797.17.435.37.748.702 1.08.337.336.65.537 1.08.703.494.191 1.02.297 1.8.333C9.075 19.994 9.461 20 12 20c2.474 0 2.878-.007 4.029-.058.782-.037 1.309-.142 1.797-.331.433-.169.748-.37 1.08-.702.337-.337.538-.65.704-1.08.19-.493.296-1.02.332-1.8.052-1.104.058-1.49.058-4.029 0-2.474-.007-2.878-.058-4.029-.037-.782-.142-1.31-.332-1.798a2.911 2.911 0 0 0-.703-1.08 2.884 2.884 0 0 0-1.08-.704c-.49-.19-1.016-.295-1.798-.331C14.925 4.006 14.539 4 12 4zm0-2c2.717 0 3.056.01 4.122.06 1.065.05 1.79.217 2.428.465.66.254 1.216.598 1.772 1.153a4.908 4.908 0 0 1 1.153 1.772c.247.637.415 1.363.465 2.428.047 1.066.06 1.405.06 4.122 0 2.717-.01 3.056-.06 4.122-.05 1.065-.218 1.79-.465 2.428a4.883 4.883 0 0 1-1.153 1.772 4.915 4.915 0 0 1-1.772 1.153c-.637.247-1.363.415-2.428.465-1.066.047-1.405.06-4.122.06-2.717 0-3.056-.01-4.122-.06-1.065-.05-1.79-.218-2.428-.465a4.89 4.89 0 0 1-1.772-1.153 4.904 4.904 0 0 1-1.153-1.772c-.248-.637-.415-1.363-.465-2.428C2.013 15.056 2 14.717 2 12c0-2.717.01-3.056.06-4.122.05-1.066.217-1.79.465-2.428a4.88 4.88 0 0 1 1.153-1.772A4.897 4.897 0 0 1 5.45 2.525c.638-.248 1.362-.415 2.428-.465C8.944 2.013 9.283 2 12 2z"
+            ></path></svg
+          >
+        </a>
+        <a
+          href="https://www.youtube.com/@greenfingersfilms5979"
+          target="_blank"
+          class="w-1/4 aspect-square bg-[#9EDCB3] flex items-center justify-center"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+            width="24"
+            height="24"
+            class="text-dark-green fill-current w-2/5 h-2/5"
+            ><path fill="none" d="M0 0h24v24H0z"></path><path
+              d="M19.606 6.995c-.076-.298-.292-.523-.539-.592C18.63 6.28 16.5 6 12 6s-6.628.28-7.069.403c-.244.068-.46.293-.537.592C4.285 7.419 4 9.196 4 12s.285 4.58.394 5.006c.076.297.292.522.538.59C5.372 17.72 7.5 18 12 18s6.629-.28 7.069-.403c.244-.068.46-.293.537-.592C19.715 16.581 20 14.8 20 12s-.285-4.58-.394-5.005zm1.937-.497C22 8.28 22 12 22 12s0 3.72-.457 5.502c-.254.985-.997 1.76-1.938 2.022C17.896 20 12 20 12 20s-5.893 0-7.605-.476c-.945-.266-1.687-1.04-1.938-2.022C2 15.72 2 12 2 12s0-3.72.457-5.502c.254-.985.997-1.76 1.938-2.022C6.107 4 12 4 12 4s5.896 0 7.605.476c.945.266 1.687 1.04 1.938 2.022zM10 15.5v-7l6 3.5-6 3.5z"
+            ></path></svg
+          >
+        </a>
+        <a
+          href="https://vimeo.com/user2817712"
+          target="_blank"
+          class="w-1/4 aspect-square bg-[#51A16C] flex items-center justify-center"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+            width="24"
+            height="24"
+            class="text-dark-green fill-current w-2/5 h-2/5"
+            ><path fill="none" d="M0 0H24V24H0z"></path><path
+              d="M17.993 3.004c2.433 0 4.005 1.512 4.005 4.496 0 1.72-.998 3.94-1.832 5.235-2.789 4.333-6.233 8.74-9.643 8.74-3.706 0-4.67-6.831-5.092-8.432-.422-1.601-.533-2.21-1.17-3.233-.317.22-.76.529-1.33.93-.224.157-.533.105-.693-.117L.925 8.807C.789 8.62.8 8.363.952 8.187 3.779 4.915 6.128 3.278 8 3.278c2.392 0 3.124 2.816 3.324 4.223.3 2.117.69 4.738 1.244 5.872.557-.792 2.18-2.888 1.967-3.99-.094-.486-1.317.183-1.887.078-.425-.08-.806-.402-.806-1.026 0-1.31 1.852-5.43 6.151-5.43zm.007 2c-2.195 0-3.251 1.533-3.653 2.208 1.25.046 1.97.818 2.133 1.803.389 2.33-1.916 4.92-2.339 5.565-.396.603-3.061 3.328-4.25-3.36-.112-.629-.367-2.163-.665-4.186-.17-1.151-.873-1.763-1.23-1.763-.842 0-1.92.65-3.855 2.515 1.905-.115 2.545 2.276 2.916 3.633.816 2.984 1.571 8.056 3.62 8.056 1.727 0 4.439-2.646 7.37-7.04.209-.311 1.966-3.024 1.966-5.036 0-2.395-1.469-2.395-2.013-2.395z"
+            ></path></svg
+          >
+        </a>
+        <a
+          href="https://www.tiktok.com/@greenfingersfilm"
+          target="_blank"
+          class="w-1/4 aspect-square bg-[#2D7244] flex items-center justify-center"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="192"
+            height="192"
+            fill="#000000"
+            viewBox="0 0 256 256"
+            class="text-dark-green fill-current w-2/5 h-2/5"
+            ><rect width="256" height="256" fill="none"></rect><path
+              d="M168,106a95.9,95.9,0,0,0,56,18V84a56,56,0,0,1-56-56H128V156a28,28,0,1,1-40-25.3V89.1A68,68,0,1,0,168,156Z"
+              fill="none"
+              stroke="rgb(27,69,41)"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="16"></path></svg
+          >
+        </a>
+      </div>
+    </footer>
+  </main>
+</Layout>
