Image component fetch error

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@ import Ticker from "../components/Ticker.astro";
       </p>
       <div class="flex items-end absolute bottom-2 gap-3 overflow-hidden">
         <Image
-          src="/public/images/200x300.jpeg"
+          src="/images/200x300.jpeg"
           alt="Greenfingers Film Still 1"
           format="webp"
           width={260}
@@ -38,7 +38,7 @@ import Ticker from "../components/Ticker.astro";
           class="grayscale"
         />
         <Image
-          src="/public/images/200x400.jpeg"
+          src="/images/200x400.jpeg"
           alt="Greenfingers Film Still 2"
           format="webp"
           width={200}
@@ -46,7 +46,7 @@ import Ticker from "../components/Ticker.astro";
           class="grayscale"
         />
         <Image
-          src="/public/images/300x200.jpeg"
+          src="/images/300x200.jpeg"
           alt="Greenfingers Film Still 3"
           format="webp"
           width={220}
@@ -62,7 +62,7 @@ import Ticker from "../components/Ticker.astro";
           class="grayscale"
         />
         <Image
-          src="/public/images/400x100.jpeg"
+          src="/images/400x100.jpeg"
           alt="Greenfingers Film Still 5"
           format="webp"
           width={200}
@@ -70,7 +70,7 @@ import Ticker from "../components/Ticker.astro";
           class="grayscale"
         />
         <Image
-          src="/public/images/400x200.jpeg"
+          src="/images/400x200.jpeg"
           alt="Greenfingers Film Still 6"
           format="webp"
           width={250}
