Image component fetch error

--- a/src/components/Awards.astro
+++ b/src/components/Awards.astro
@@ -9,7 +9,7 @@ const indexes = Astro.props.indexes;
   {
     indexes.map((i) => (
       <Picture
-        src={`images/awards/${i}.png`}
+        src={`/images/awards/${i}.png`}
         widths={[500, 400, 200]}
         aspectRatio={1.506}
         sizes="(max-width: 800px) 100vw, 800px"
