--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,7 +54,7 @@ import Ticker from "../components/Ticker.astro";
           class="grayscale"
         />
         <Image
-          src="/public/images/300x300.jpeg"
+          src="/images/300x300.jpeg"
           alt="Greenfingers Film Still 4"
           format="webp"
           width={260}
