--- a/src/components/FilmCard.astro
+++ b/src/components/FilmCard.astro
@@ -5,10 +5,10 @@ const { title, year, img, slug } = Astro.props.film;
 const index = Astro.props.index;
 ---
 
-<div class="flex flex-col">
+<a class="flex flex-col" href={`/films/${slug}`}>
   <Image
-    src="/images/film-card-images/test.jpg"
-    alt="Greenfingers Film Still 1"
+    src={`/images/film-card-images/${slug}.jpg`}
+    alt={`Still from ${title} by Greenfingers Films`}
     format="webp"
     width={475}
     height={542}
@@ -30,7 +30,7 @@ const index = Astro.props.index;
       </p>
     </div>
   </div>
-</div>
+</a>
 <style>
   .text-outline {
     -webkit-text-stroke-width: 1px;
