--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,56 +28,7 @@ import Ticker from "../components/Ticker.astro";
           Your friendly award-winning film collective.
         </p>
       </div>
-      <div class="flex items-end absolute bottom-2 gap-3 overflow-hidden">
-        <Image
-          src="/images/200x300.jpeg"
-          alt="Greenfingers Film Still 1"
-          format="webp"
-          width={260}
-          height={170}
-          class="grayscale"
-        />
-        <Image
-          src="/images/200x400.jpeg"
-          alt="Greenfingers Film Still 2"
-          format="webp"
-          width={200}
-          height={120}
-          class="grayscale"
-        />
-        <Image
-          src="/images/300x200.jpeg"
-          alt="Greenfingers Film Still 3"
-          format="webp"
-          width={220}
-          height={160}
-          class="grayscale"
-        />
-        <Image
-          src="/images/300x300.jpeg"
-          alt="Greenfingers Film Still 4"
-          format="webp"
-          width={260}
-          height={150}
-          class="grayscale"
-        />
-        <Image
-          src="/images/400x100.jpeg"
-          alt="Greenfingers Film Still 5"
-          format="webp"
-          width={200}
-          height={100}
-          class="grayscale"
-        />
-        <Image
-          src="/images/400x200.jpeg"
-          alt="Greenfingers Film Still 6"
-          format="webp"
-          width={250}
-          height={140}
-          class="grayscale"
-        />
-      </div>
+      <div class="flex items-end absolute bottom-2 gap-3 overflow-hidden"></div>
     </section>
     <Awards indexes={[1, 2, 3]} />
     <section class="pt-20">
