--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -56,4 +56,13 @@ const { title } = Astro.props;
   section {
     padding: 0 2rem;
   }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-family: "Humane", sans-serif;
+  }
 </style>
