Font issue on mobile

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import Ticker from "../components/Ticker.astro";
     <section class="h-screen">
       <div class="pt-24">
         <h1
-          class="uppercase font-humane text-primary text-[58vw] leading-[43vw] md:text-[35vw] font-bold"
+          class="uppercase text-primary text-[58vw] leading-[43vw] md:text-[35vw] font-bold"
         >
           Green<br class="md:hidden" />fingers
         </h1>
