--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -3,9 +3,7 @@ const { text, banner = false, addtionalClasses } = Astro.props;
 ---
 
 <div class={"inline-block relative " + addtionalClasses}>
-  <h1
-    class="text-9xl md:capsizedText font-humane font-bold uppercase text-primary"
-  >
+  <h1 class="text-9xl md:capsizedText font-bold uppercase text-primary">
     {text}
   </h1>
   {
