--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,7 +33,7 @@ const { title } = Astro.props;
   @font-face {
     font-family: "Humane";
     src: url("/fonts/Humane-Bold.otf") format("otf");
-    font-weight: bold;
+    font-weight: normal;
     font-style: normal;
     font-display: swap;
   }
