Fonts not displaying on mobile

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -32,7 +32,7 @@ const { title } = Astro.props;
 
   @font-face {
     font-family: "Humane";
-    src: url("/fonts/Humane-Bold.otf") format("otf");
+    src: url("/fonts/Humane-Bol.otf") format("otf");
     font-weight: normal;
     font-style: normal;
     font-display: swap;
