--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,6 +30,22 @@ const { title } = Astro.props;
     );
   }
 
+  @font-face {
+    font-family: "Humane";
+    src: url("/fonts/Humane-Bold.ttf") format("ttf");
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+  }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5 {
+    font-family: "Humane", sans-serif;
+  }
+
   * {
     box-sizing: border-box;
     margin: 0;
