--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -32,7 +32,7 @@ const { title } = Astro.props;
 
   @font-face {
     font-family: "Humane";
-    src: url("/fonts/Humane-Bold.ttf") format("ttf");
+    src: url("/fonts/Humane-Bold.woff") format("woff");
     font-weight: normal;
     font-style: normal;
     font-display: swap;
