--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -64,4 +64,10 @@ const { title } = Astro.props;
   section {
     padding: 0 2rem;
   }
+
+  @media (max-width: 768px) {
+    section {
+      padding: 0 1rem;
+    }
+  }
 </style>
