Title component line height adj

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -5,7 +5,9 @@
   class="mt-2 flex justify-between bg-custom-black text-primary rounded-lg py-1 fixed top-1 z-50"
 >
   <div class="w-3/12 md:w-2/12 flex justify-center">
-    <h1 class="uppercase text-2xl tracking-wide leading-none mt-1 py-1">
+    <h1
+      class="font-humane uppercase text-2xl tracking-wide leading-none mt-1 py-1"
+    >
       Greenfingers
     </h1>
   </div>
