--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import Ticker from "../components/Ticker.astro";
     <section class="h-screen">
       <div class="pt-32">
         <h1
-          class="uppercase text-primary text-[58vw] leading-[43vw] md:text-[35vw] font-bold"
+          class="font-humane uppercase text-primary text-[58vw] leading-[43vw] md:text-[35vw] font-bold"
         >
           Green<br class="md:hidden" />fingers
         </h1>
@@ -42,7 +42,7 @@ import Ticker from "../components/Ticker.astro";
       <div class="flex flex-col md:justify-between md:items-end md:w-5/6">
         <Title text=" Meet the Fingers" addtionalClasses="whitespace-nowrap" />
         <p
-          class="max-w-sm md:max-w-xs md:px-6 md:text-right text-primary opacity-70 tracking-tight text-sm font-light"
+          class="max-w-xs md:px-6 md:text-right text-primary opacity-70 tracking-tight text-xs md:text-sm font-light"
         >
           Greenfingers is an internationally award-winning film collective based
           in Manchester. Meet our members below.
