--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -3,7 +3,9 @@ const { text, banner = false, addtionalClasses } = Astro.props;
 ---
 
 <div class={"inline-block relative " + addtionalClasses}>
-  <h1 class="text-9xl leading-[0.8] font-bold uppercase text-primary">
+  <h1
+    class="font-humane text-8xl leading-[0.8] font-bold uppercase text-primary"
+  >
     {text}
   </h1>
   {
