--- a/src/components/ProfileCard.astro
+++ b/src/components/ProfileCard.astro
@@ -1,18 +1,21 @@
 ---
 import { Image, Picture } from "@astrojs/image/components";
+import Modal from "../components/Modal.jsx";
 
 const { name, picture, bio } = Astro.props.person;
 ---
 
 <div class="w-full aspect-square md:w-auto md:aspect-auto">
-  <Image
-    src={picture}
-    alt={`Profile picture of ${name} from Greenfingers Films`}
-    format="webp"
-    width={390}
-    height={425}
-    class="rounded-sm md:rounded-md w-full md:w-auto"
-  />
+  <Modal name={name} picture={picture} bio={bio} client:load>
+    <Image
+      src={picture}
+      alt={`Profile picture of ${name} from Greenfingers Films`}
+      format="webp"
+      width={390}
+      height={425}
+      class="rounded-sm md:rounded-md w-full md:w-auto"
+    />
+  </Modal>
   <h3 class="hidden md:visible mt-1 text-lg tracking-tight text-primary">
     {name}
   </h3>
