--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -10,9 +10,9 @@ const { text, banner = false, addtionalClasses } = Astro.props;
   </h1>
   {
     banner && (
-      <div class="absolute bottom-0 bg-custom-black text-primary flex rounded-sm -rotate-2 right-0 translate-x-1/3 translate-y-4">
+      <div class="absolute bottom-0 bg-custom-black bg-opacity-70 text-primary flex rounded-lg right-0 translate-x-1/3 translate-y-4">
         <p class="font-sans text-[8px] font-medium uppercase tracking-tighter px-2 py-1.5">
-          More coming soon
+          ✨ More coming soon
         </p>
       </div>
     )
