--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,6 +20,7 @@ const { title } = Astro.props;
   </body>
 </html>
 <style is:global>
+  @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap");
   :root {
     --accent: 124, 58, 237;
     --accent-gradient: linear-gradient(
@@ -45,7 +46,7 @@ const { title } = Astro.props;
   }
 
   html {
-    font-family: system-ui, sans-serif;
+    font-family: "Inter", monospace;
     background-color: #1b4529;
   }
   code {
