Testing video bg performance

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ import Ticker from "../components/Ticker.astro";
         loop
         id="bgvid"
       >
-        <source src="/images/TEST.mp4" type="video/mp4" />
+        <source src="/images/TEST (2).mp4" type="video/mp4" />
       </video>
       <div class="relative pt-32 z-20">
         <h1
