--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -4,7 +4,7 @@ const { text, banner = false, addtionalClasses } = Astro.props;
 
 <div class={"inline-block relative " + addtionalClasses}>
   <h1
-    class="font-humane text-[7rem] leading-[0.8] font-bold uppercase text-primary"
+    class="font-humane text-[6.5rem] md:text-[7rem] leading-[0.8] font-bold uppercase text-primary"
   >
     {text}
   </h1>
