Mobile page loads scrolled down, wonder if font flash issue

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,11 +34,11 @@ import Ticker from "../components/Ticker.astro";
         </div>
       </div>
       <div class="relative pt-32 z-20">
-        <h1
-          class="font-humane uppercase text-primary text-[58vw] leading-[43vw] md:text-[35vw] font-bold"
+        <!-- <h1
+          class="uppercase text-primary text-[58vw] leading-[43vw] md:text-[35vw] font-bold"
         >
           Green<br class="md:hidden" />fingers
-        </h1>
+        </h1> -->
 
         <p
           class="uppercase opacity-50 text-primary text-xs md:text-sm font-normal tracking-tight -mt-4 md:ml-32 md:w-48 leading-4"
