--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import Ticker from "../components/Ticker.astro";
   <Navbar />
 
   <main class="">
-    <section class="h-[110vh]">
+    <section class="h-[110vh] relative">
       <div class="absolute top-0 h-[110vh] left-0">
         <video
           class="object-cover h-[110vh] z-10"
